--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@types/chrome": "^0.0.209",
+    "@xstate/inspect": "^0.8.0",
     "@xstate/react": "^3.1.2",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^8.5.0",
